deployments/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: slack-metrics-api-ingress
  namespace: default
  labels:
    app: slack-metrics-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: sm-api.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: slack-metrics-api
                port:
                  number: 8080
